# huckleberry-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISION_LOG.md  Dockerfile  README.md  SECURITY.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
src/huckleberry_mcp/: auth.py  oauth.py  server.py  utils.py
src/huckleberry_mcp/resources/: daily_summary.py
src/huckleberry_mcp/tools/: children.py  diaper.py  feeding.py  growth.py  pumping.py  sleep.py
