[project]
name = "huckleberry-mcp"
version = "0.2.0"
description = "Remote MCP server for Huckleberry baby tracking — Claude mobile / web / desktop"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.12.0,<3.0.0",
    "huckleberry-api>=0.4.0,<0.5.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[project.scripts]
huckleberry-mcp = "huckleberry_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # async pitfalls (matters here — async API + OAuth)
]
ignore = [
    "E501",   # line too long — formatter handles it
    "B008",   # function call in default arg — FastMCP decorator patterns
    "SIM108", # ternary over if/else — readability over terseness
]

[tool.ruff.lint.per-file-ignores]
"src/huckleberry_mcp/oauth.py" = ["E402"]  # module-level imports after __future__
